jump to next page fixed

--- a/modal.scss
+++ b/modal.scss
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Oswald|Roboto);
+:root {
+  --dark: #242423;
+  --white: #fff;
+  --theme-color: #c8947e;
+}
 body {
   position: absolute;
   left: 0;
@@ -7,7 +12,8 @@ body {
   width: 100%;
   height: 100%;
   font-family: "Roboto", sans-serif;
-  background-color: #5356ad;
+  // background-color: #5356ad;
+  background-color:var(--theme-color);
   overflow: hidden;
 }
 
@@ -40,7 +46,7 @@ display: none;
   width: 600px;
   margin: 30px auto 0;
   height: 320px;
-  background-color: #999ede;
+  background-color: var(--theme-color);
   top: 50%;
   margin-top: -160px;
   -moz-transition: all 0.5s;
@@ -61,7 +67,7 @@ display: none;
   position: absolute;
   left: 152px;
   top: 50px;
-  background-color: #9297e0;
+  background-color: #00000005;
   transform: rotateX(52deg) rotateY(15deg) rotateZ(-38deg);
   width: 300px;
   height: 285px;
@@ -71,7 +77,7 @@ display: none;
   transition: all 0.5s;
 }
 .containermodal .box:after {
-  background-color: #a5aae4;
+  background-color: #00000005;
   top: -10px;
   left: 80px;
   width: 320px;
@@ -86,7 +92,7 @@ display: none;
   margin: 0 auto;
   width: 100px;
   color: #fff;
-  background-color: #999ede;
+  background-color: var(--theme-color);
   opacity: 1;
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
